--- a/privacy.html
+++ b/privacy.html
@@ -78,5 +78,14 @@
             <p>If you have any questions about this Privacy Policy, please contact us at support[at]bryan.blog or via the contact form.</p>
         </div>
     </div>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0QWHZCMSTM"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-0QWHZCMSTM');
+    </script>
 </body>
 </html>
