--- a/tos.html
+++ b/tos.html
@@ -100,5 +100,15 @@
             </p>
         </div>
     </div>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0QWHZCMSTM"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-0QWHZCMSTM');
+    </script>
 </body>
 </html>
